KotlinDemoGithubProject/app/src/main/java/com/example/kotlindemogithubproject/http/error/HttpPageNoFoundError.kt
package com.example.kotlindemogithubproject.http.error


class HttpPageNoFoundError : HttpError(HttpErrorCode.PAGE_NOT_FOUND)
